# diffable-sql

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
diffable_sql/: __main__.py  cli.py
tools/: generate_sqlite.py
