[tool.poetry]
name = "diffable-sql"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom@tomforb.es>"]
readme = "README.md"
packages = [{include = "diffable_sql"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["postgresql"], version = "^2.0.15"}
click = "^8.1.3"

[tool.poetry.scripts]
diffable-sql = "diffable_sql.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
